backends/rust/src/snapshots/ridl_backend_rust__tests__struct_with_optional_and_reserved.snap
---
source: backends/rust/src/tests.rs
expression: rust_for(decls)
---
/// Vehicle speed over ground
#[repr(transparent)]
pub struct Speed(pub f64);
impl Default for Speed {
    fn default() -> Self {
        Speed(0.0)
    }
}
#[repr(transparent)]
pub struct Label(pub String);
pub struct DriverProfile {
    pub name: Label,
    pub speed: Speed,
    pub r#override: Option<Speed>,
}
