backends/rust/src/snapshots/ridl_backend_rust__tests__tuple_field_generates_named_struct.snap
---
source: backends/rust/src/tests.rs
expression: rust_for(decls)
---
/// Vehicle speed over ground
#[repr(transparent)]
pub struct Speed(pub f64);
impl Default for Speed {
    fn default() -> Self {
        Speed(0.0)
    }
}
pub struct SensorBounds {
    pub range: SensorBoundsRange,
}
impl Default for SensorBounds {
    fn default() -> Self {
        SensorBounds {
            range: SensorBoundsRange::default(),
        }
    }
}
pub struct SensorBoundsRange {
    pub min: Speed,
    pub max: Speed,
}
impl Default for SensorBoundsRange {
    fn default() -> Self {
        SensorBoundsRange {
            min: Speed::default(),
            max: Speed::default(),
        }
    }
}
